# neon

./: .gitignore  .neon_ai_playtest_state.txt  AGENTS.md  CMakeLists.txt  TODO.md  build.txt  neon_game
.githooks/: pre-commit
assets/: ART_DIRECTION.md
docs/: MANUAL_UPDATE_HOOK.md  USER_MANUAL.md
openspec/changes/archive/2026-04-18-environmental-hazards/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-l0-pressure-ventilation/: design.md  proposal.md  tasks.md
openspec/changes/conversation-glitch-bubbles/: design.md  proposal.md  tasks.md
openspec/changes/fixed-npc-population/: design.md  proposal.md  tasks.md
openspec/changes/high-value-item-provenance/: README.md  design.md  proposal.md  tasks.md
openspec/changes/inventory-modal-navigation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/market-barter-ui/: design.md  proposal.md  tasks.md
openspec/changes/market-price-modifiers/: design.md  proposal.md  tasks.md
openspec/changes/npc-conversation-eavesdropping/: README.md  design.md  proposal.md  tasks.md
openspec/changes/sandbox-housing-district/: README.md  design.md  proposal.md  tasks.md
openspec/changes/sandbox-microcity-map/: README.md  design.md  proposal.md  tasks.md
openspec/changes/sandbox-placement-basics/: design.md  proposal.md  tasks.md
openspec/changes/tool-item-hotkey-ranges/: design.md  proposal.md  tasks.md
openspec/specs/biology-metabolism/: spec.md
openspec/specs/discrete-inventory/: spec.md
openspec/specs/district-interference-boundary/: spec.md
openspec/specs/district-worker-isolation/: spec.md
openspec/specs/environmental-hazards/: spec.md
openspec/specs/equipped-tools/: spec.md
openspec/specs/hotkey-rebinding/: spec.md
openspec/specs/injury-status/: spec.md
openspec/specs/inventory-equipped-tools/: spec.md
openspec/specs/item-flag-visibility/: spec.md
openspec/specs/layer-visibility/: spec.md
openspec/specs/local-risk/: spec.md
openspec/specs/medical-treatment/: spec.md
openspec/specs/municipal-access/: spec.md
openspec/specs/organ-health/: spec.md
openspec/specs/pathogen-propagation/: spec.md
openspec/specs/power-grid/: spec.md
openspec/specs/pressure-ventilation/: spec.md
openspec/specs/route-purpose-readouts/: spec.md
openspec/specs/scan-targeting/: spec.md
openspec/specs/simulation-alerts/: spec.md
openspec/specs/social-rank/: spec.md
openspec/specs/structural-integrity/: spec.md
openspec/specs/survival-inventory-ui/: spec.md
openspec/specs/temperature-simulation/: spec.md
openspec/specs/torch-controls/: spec.md
openspec/specs/transit-stations/: spec.md
openspec/specs/visual-feedback/: spec.md
scripts/: check-user-manual-updated.sh  install-git-hooks.sh
src/: ai_playtest.h  clinic_layout.h  components.h  debugger_terminal.h  ecs.h  equipment.h  feature_flags.h  fixed_actor_system.h  infrastructure_solver.h  interior.h  inventory.h  main.cpp  save_state.h  simulation_coordinator.h  simulation_systems.h  spatial_grid.h  systems.h  target_selection.h  world_builder.h  world_config.h  world_generation.h
tests/: ai_playtest_tests.cpp  conversation_system_tests.cpp  discrete_inventory_tests.cpp  equipment_tests.cpp  market_trade_tests.cpp  pathogen_system_tests.cpp  simulation_alert_tests.cpp  survival_inventory_tests.cpp  target_selection_tests.cpp  visual_feedback_tests.cpp  world_builder_tests.cpp  world_generation_tests.cpp
todo/: EPOCHS.md  TODO.md  TODO_AUDIT_2026-04-18.md  completed_todo.md  feature_flags.cpp
todo/changes/creative-overview/: design.md  mvp_spec.md  proposal.md  tasks.md
todo/specs/: resource-flags.md
todo/specs/ambient-city-traffic/: spec.md
todo/specs/ascii-glyph-renderer/: spec.md
todo/specs/city-scaling/: spec.md
todo/specs/cognitive-pad-axes/: spec.md
todo/specs/consumable-items/: spec.md
todo/specs/economic-component/: spec.md
todo/specs/height-gradient/: spec.md
todo/specs/npc-memory-events/: spec.md
todo/specs/npc-schedule/: spec.md
todo/specs/pedestrian-transit-interaction/: spec.md
todo/specs/relationship-graph/: spec.md
todo/specs/super-block-urban-planning/: spec.md
todo/specs/traffic-intersection-management/: spec.md
todo/specs/transit-infrastructure-scaling/: spec.md
todo/specs/vehicle-dimensions/: spec.md
todo/specs/witness-trauma-propagation/: spec.md
tools/: ai_playtest.cpp  check_openspec_completed_archives.sh  verify_feature_completion.sh
(+178 files in other folders)
